Updated with video link

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <h3>YouTube Playlist Downloader (construction in progress)</h3>
+          <h3>YouTube Playlist Downloader (construction of site in progress)</h3>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
@@ -83,7 +83,7 @@
                 Watch how to use the program
               </div>
               <div class="mdl-card__actions">
-                <a href="https://www.youtube.com/channel/UCrNwlOzrNyhzMbPGM8okmeA" class="mdl-button">Watch on YouTube</a>
+                <a href="https://www.youtube.com/watch?v=gM8W2n5FHfc" class="mdl-button">Watch on YouTube</a>
               </div>
             </div>
           </section>
