--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
-          <h3>YouTube Playlist Downloader)</h3>
+          <h3>YouTube Playlist Downloader</h3>
         </div>
         <div class="mdl-layout--large-screen-only mdl-layout__header-row">
         </div>
